# gamedev

./: CMakeLists.txt  SoVengine  SoVengine.c++  SoVengine.cpp  WorldTime.h  animations.h  collision.h  doors.h  enemy.h  feedback.h  intromovie.h  inv  inv.h  inventory.c++  inventory.cpp  minimap.h  npc  npc.h  polygon.h  polygons.h  portrait.h  region_map.h  shop.h  vectorx2f.h  vertices.h
images/ui/: invpanel.png~
ui/: daggericon.png~
